# ComAir

./: .gitignore  LICENSE  README.md
Code/InHouse/: .gitignore  CMakeLists.txt  README.md
Code/InHouse/include/AprofHookPass/: AprofHookPass.h
Code/InHouse/include/Common/: ArrayLinkedIdentifier.h  BBProfiling.h  Constant.h  Helper.h  InputFileParser.h  MonitorRWInsts.h
Code/InHouse/include/FuncInlinePass/: FuncInlinePass.h
Code/InHouse/include/FuncPtrTracer/: FuncPtrTracer.h
Code/InHouse/include/IDAssigner/: IDManager.h  IDTagger.h
Code/InHouse/include/InHouseHookPass/: InHouseHookPass.h
Code/InHouse/include/MakeFunctionInline/: MakeFunctionInline.h
Code/InHouse/include/Support/: BBProfiling.h
Code/InHouse/lib/: CMakeLists.txt
Code/InHouse/lib/AprofHookPass/: AprofHookPass.cpp  AprofHookPass.cpp.bak2  CMakeLists.txt
Code/InHouse/lib/Common/: ArrayLinkedIdentifier.cpp  BBProfiling.cpp  CMakeLists.txt  InputFileParser.cpp  MonitorRWInsts.cpp
Code/InHouse/lib/CountPass/: CountPass.cpp
Code/InHouse/lib/FuncInlinePass/: CMakeLists.txt  FuncInlinePass.cpp
Code/InHouse/lib/FuncPtrTracer/: CMakeLists.txt  FuncPtrTracer.cpp
Code/InHouse/lib/IDAssigner/: CMakeLists.txt  IDTagger.cpp
Code/InHouse/lib/InHouseHookPass/: CMakeLists.txt  InHouseHookPass.cpp
Code/InHouse/lib/MakeFunctionInline/: MakeFunctionInline.cpp
Code/InHouse/lib/MarkFlagForAprof/: MarkFlagForAprofNoOpt.cpp
Code/InHouse/lib/Support/: BBProfiling.cpp
Code/InHouse/parser/: CMakeLists.txt
Code/InHouse/parser/FuncPtrParser/: CMakeLists.txt  FuncPtrParser.cpp  FuncPtrParser.h
Code/InHouse/parser/InHouseCompressFileLogger/: CMakeLists.txt  InHouseCompressFileLogger.cpp
Code/InHouse/parser/InHouseFileLogger/: CMakeLists.txt  InHouseFileLogger.cpp
Code/InHouse/parser/InHouseLogger/: CMakeLists.txt  InHouseLogger.cpp
Code/InHouse/runtime/: CMakeLists.txt
Code/InHouse/runtime/AprofHooks/: aproflib.c  aproflib.h  aproflib.inline.bc  aproflib.inline.bc.check  prof-hook.o.check
Code/InHouse/runtime/AprofLogger/: AprofLogger  Makefile
Code/InHouse/runtime/FuncPtrHooks/: CMakeLists.txt  FuncPtrHooks.cpp  FuncPtrHooks.h
Code/InHouse/runtime/InHouseCondHooks/: InHouseCondHooks.c  InHouseCondHooks.h  Makefile
Code/InHouse/runtime/InHouseETLHooks/: InHouseETLHooks.cpp  InHouseETLHooks.cpp.bak  InHouseETLHooks.cpp.bak2  InHouseETLHooks.h  Makefile
Code/InHouse/runtime/InHouseFileCondHooks/: InHouseFileCondHooks.c  InHouseFileCondHooks.h  Makefile
Code/InHouse/runtime/InHouseFileHooks/: InHouseHooks.c  InHouseHooks.h  Makefile
Code/InHouse/runtime/InHouseFileTLHooks/: InHouseFileTLHooks.cpp  InHouseFileTLHooks.h  Makefile
Code/InHouse/runtime/InHouseHooks/: InHouseHooks.c  InHouseHooks.h  Makefile
Code/InHouse/runtime/InHouseMTHooks/: InHouseMTHooks.cpp  InHouseMTHooks.h  Makefile
Code/InHouse/runtime/InHouseTLHooks/: InHouseTLHooks.cpp  InHouseTLHooks.h  Makefile
Code/InHouse/stubs/apache34464/: .csv  Makefile  README.md  aprof_logger_10s5rP  aprof_logger_8mixTl  aprof_logger_CkAv26  aprof_logger_DJNoLT  aprof_logger_NDtZDU  aprof_logger_SQgQCm  aprof_logger_ZzAlrQ  aprof_logger_fYmSvB  aprof_logger_uWcXCA  aprof_logger_ysxqI8  gen_input.py  input-200-oprofile.result  run.sh  run_oprofile.sh
Code/ProductionRun/: .gitignore  CMakeLists.txt  README.md
Code/ProductionRun/arraydump/: CMakeLists.txt
Code/ProductionRun/arraydump/include/: ParseRecord.h  SharedMemReader.h
Code/ProductionRun/arraydump/src/: ParseRecord.cpp  SharedMemReader.cpp
Code/ProductionRun/dumpmem/: CMakeLists.txt
Code/ProductionRun/dumpmem/include/: ParseRecord.h  SharedMemReader.h
Code/ProductionRun/dumpmem/src/: ParseRecord.cpp  SharedMemReader.cpp
Code/ProductionRun/include/Common/: ArrayLinkedIdentifier.h  ArrayLinkedIndentifier.h  BBProfiling.h  Constant.h  Constants.h  Helper.h  IDHelper.h  InputFileParser.h  LoadStoreMem.h  LocateInstrument.h  MonitorRWInsts.h  MonitoredInsts.h  Search.h  SearchHelper.h  WorkList.h
Code/ProductionRun/include/FuncPtrReplacer/: FuncPtrReplacer.h
Code/ProductionRun/include/FuncPtrTracer/: FuncPtrTracer.h
Code/ProductionRun/include/IDAssigner/: IDAssigner.h  IDManager.h  IDTagger.h
Code/ProductionRun/include/IndvarFinder/: CMakeLists.txt  IndvarFinder.cpp
Code/ProductionRun/include/LoopSampler/IndvarFinder/: CMakeLists.txt  IndvarFinder.cpp  IndvarFinder.h
Code/ProductionRun/include/OptLoopInstrumentor/: BBProfiling.h  OptLoopInstrumentor.h
Code/ProductionRun/include/Optimization/: Optimize.h
Code/ProductionRun/include/PreAnalyzer/: PreAnalyzer.h
Code/ProductionRun/lib/: CMakeLists.txt
Code/ProductionRun/lib/AprofHook/: AprofHookPass.cpp
Code/ProductionRun/lib/BBProfiling/: BBProfiling.cpp
Code/ProductionRun/lib/LoopSampler/LLInstrumentor/: CMakeLists.txt  LLInstrumentor.cpp
Code/ProductionRun/lib/LoopSampler/LoopInstrumentor/: CMakeLists.txt  LoopInstrumentor.cpp
Code/ProductionRun/lib/LoopSampler/NoInstrumentor/: CMakeLists.txt  NoInstrumentor-cost.cpp  NoInstrumentor-rw.cpp  NoInstrumentor.cpp
Code/ProductionRun/parser/: CMakeLists.txt  ParseRecord.cpp  ParseRecord.h  SharedMemReader.cpp  SharedMemReader.h
Code/ProductionRun/runtime/: CMakeLists.txt
Code/ProductionRun/runtime/007-recursive/: aproflib.c
Code/ProductionRun/runtime/AProfHooks/: CMakeLists.txt
Code/ProductionRun/runtime/AProfLoopArrayListHooks/include/: aproflib.h
Code/ProductionRun/runtime/AProfRecursiveHooks/src/: logmf.c
Code/ProductionRun/runtime/include/: Random.h  Shmem.h
Code/ProductionRun/runtime/libs/AProfHooks/: aproflib.c
Code/ProductionRun/runtime/src/: Random.c  Shmem.c
Code/Results/: experiment_data.xlsx
Code/scripts/aprof/: rank_by_cost.py
Code/scripts/fitting/: README.md  funct.m
Code/scripts/oprofile/: parse_operf_result.py
Code/scripts/pin/: Makefile  README.md  br_rank.py  branch.cpp  loop_test  loop_test.c
Code/scripts/ranking/: callgraph.cpp  gen_funcIdCost.py  gen_rank.py  rank.py
Code/scripts/time/: parse_time_log.py
Doc/: Principle.md
Results/: ISSTA-2020-results.xlsx  trans-results.xlsx
(+139 files in other folders)
